Fix: relative links updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Rock, Paper, Paw Game</title>
   </head>
   <body>
@@ -16,21 +16,21 @@
           <li>
             <a href="#" id="oppCat0" onClick="pickOpponent(this.id)"
               ><img
-                src="/images/oppCat1.png"
+                src="images/oppCat1.png"
                 alt="An image of a cute cat. This is cat No1"
             /></a>
           </li>
           <li>
             <a href="#" id="oppCat1" onClick="pickOpponent(this.id)"
               ><img
-                src="/images/oppCat2.jpg"
+                src="images/oppCat2.jpg"
                 alt="An image of a cute cat. This is cat No2"
             /></a>
           </li>
           <li>
             <a href="#" id="oppCat2" onClick="pickOpponent(this.id)"
               ><img
-                src="/images/oppCat3.jpg"
+                src="images/oppCat3.jpg"
                 alt="An image of a cute cat. This is cat No3"
             /></a>
           </li>
@@ -52,5 +52,5 @@
       <p class="param"></p>
     </div>
   </body>
-  <script type="text/javascript" src="/script/script.js"></script>
+  <script type="text/javascript" src="script/script.js"></script>
 </html>
